--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "backend"]
 	path = backend
 	url = git@github.com:PinTogether/backend.git
+[submodule "frontend"]
+	path = frontend
+	url = git@github.com:PinTogether/frontend.git
